--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "NewWave",
   "license": "ISC",
   "dependencies": {
+    "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2"
   }
 }
