--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
-  "name": "WaffleNote",
+  "name": "와플노트",
   "version": "1.0",
   "description": "waffleNote~",
-  "permissions": ["tabs", "activeTab", "storage"],
+  "permissions": ["file://*/*","desktopCapture", "tabs", "activeTab", "declarativeContent", "storage"],
+  "manifest_version": 2,
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "page_action": {
+  "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
   },
-  "manifest_version": 2
+  "icons":{
+    "128": "icon.png"
+  }
 }
