--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "NewWave",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^4.1.1",
+    "body-parser": "^1.19.0",
     "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
