--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,10 @@
   "name": "와플노트",
   "version": "1.0",
   "description": "waffleNote~",
-  "permissions": ["file://*/*","desktopCapture", "tabs", "activeTab", "declarativeContent", "storage"],
   "manifest_version": 2,
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent" : false 
   },
   "browser_action": {
     "default_popup": "popup.html",
@@ -14,5 +13,16 @@
   },
   "icons":{
     "128": "icon.png"
-  }
+  },
+  "permissions": [
+    "file://*/*",
+    "<all_urls>",
+    "desktopCapture",
+    "tabs", 
+    "activeTab", 
+    "declarativeContent", 
+    "storage",
+    "tabCapture",
+    "downloads"
+  ]
 }
