--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,27 @@
 {
-  "short_name": "WaffleNote",
-  "name": "WaffleNote",
-  "icons": [
+  "name": "Waffle Note",
+  "version": "1.0.0",
+  "manifest_version": 2,
+  "description": "Waffle Note",
+  "background": {
+    "page": "background.html",
+    "persistent": false
+  },
+  "permissions": [
+    "storage",
+    "tabs",
+    "desktopCapture",
+    "activeTab", 
+    "declarativeContent", 
+    "tabCapture",
+    "downloads",
+    "file://*/*",
+    "<all_urls>"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "icons": {
+  },
+  "browser_action": {
+    "default_icon": "sample_icon.png",
+    "default_popup": "popup.html"
+  }
 }
