--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,7 @@
     "page": "background.html",
     "persistent": false
   },
+  "content_security_policy": "script-src 'self' https://unpkg.com; object-src 'self'",
   "permissions": [
     "storage",
     "tabs",
