--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^4.1.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "request": "^2.88.2",
     "streamifier": "^0.1.1"
   }
 }
