--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
   ],
   "icons": {},
   "browser_action": {
-    "default_icon": "sample_icon.png",
+    "default_icon": "WaffleLogo.png",
     "default_popup": "popup.html"
   },
   "content_security_policy": "script-src 'self' https://unpkg.com https://cdnjs.cloudflare.com ; object-src 'self'"
