--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "streamifier": "^0.1.1"
