--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@google-cloud/speech": "^4.1.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "streamifier": "^0.1.1"
