--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "sharp": "^0.26.1",
     "streamifier": "^0.1.1"
   }
 }
