--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "dotenv": "^8.2.0",
     "eslint-config-naver": "^2.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "google-auth-library": "^6.1.1",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "session-file-store": "^1.5.0",
     "sharp": "^0.26.1",
     "streamifier": "^0.1.1"
   }
