--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.9.3",
     "d3": "^6.2.0",
     "lodash": "^4.17.19",
+    "pdfjs": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
