--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-auth-library": "^6.1.1",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.13",
     "nodemon": "^2.0.4",
     "session-file-store": "^1.5.0",
     "sharp": "^0.26.1",
