--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^2.0.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
