--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "chart.js": "^2.9.3",
     "d3": "^6.2.0",
     "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
     "pdfjs": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-h5-audio-player": "^3.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
