Fix: remove unnecessary permissions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,13 +11,7 @@
     "storage",
     "tabs",
     "desktopCapture",
-    "activeTab",
-    "declarativeContent",
-    "tabCapture",
-    "downloads",
-    "file://*/*",
-    "<all_urls>",
-    "unlimitedStorage"
+    "<all_urls>"
   ],
   "icons": {
     "16": "WaffleLogo.png",
